[metadata]
name = dis_cli
version = 0.3.0
description = A tool to inspect disassembled Python code on the command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshKarpel/dis-cli
author = Josh Karpel
author_email = josh.karpel@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Topic :: Software Development :: Disassemblers
    Topic :: Utilities

[options]
py_modules = dis_cli
install_requires =
    click>=7
    rich>=12
python_requires = >=3.7

[options.entry_points]
console_scripts =
    dis = dis_cli:cli

[options.extras_require]
tests =
    mypy>=0.900
    pytest>=6
    pytest-cov>=2.10
    pytest-mypy>=0.8.1
    types-click>=7.1.2
    importlib-metadata;python_version<"3.8"

[mypy]
files = dis_cli.py, tests/*.py
pretty = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[mypy-rich.*]
no_implicit_optional = false

[bdist_wheel]
universal = true
