[metadata]
name = dis_cli
version = 0.4.0
description = A tool to inspect disassembled Python code on the command line.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JoshKarpel/dis-cli
author = Josh Karpel
author_email = josh.karpel@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Software Development :: Disassemblers
    Topic :: Utilities

[options]
py_modules = dis_cli
install_requires =
    click>=8
    rich>=13
python_requires = >=3.8

[options.entry_points]
console_scripts =
    dis = dis_cli:cli

[options.extras_require]
tests =
    mypy>=1
    pytest>=7
    pytest-cov>=3
    types-click>=7

[mypy]
files = .
pretty = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[mypy-rich.*]
no_implicit_optional = false

[bdist_wheel]
universal = true
